option('with-mpi',   type : 'feature', value : 'auto', description: 'enable MPI support')
option('enable-tecio', type : 'boolean', value : true, description: 'enable TECIO support')
option('enable-cgns',  type : 'boolean', value : true, description: 'enable CGNS support')
option('enable-autodiff',  type : 'boolean', value : false, description: 'enable AD (reverse) support')
option('enable-directdiff',  type : 'boolean', value : false, description: 'enable AD (forward) support')
option('enable-pywrapper',  type : 'boolean', value : false, description: 'enable Python wrapper support')
option('enable-normal',  type : 'boolean', value : true, description: 'enable normal build')
option('python_path',  type : 'string', value : '', description: 'Python path')
option('enable-mkl', type : 'boolean', value : false, description: 'enable Intel-MKL support')
option('mkl_root', type : 'string', value : '/opt/intel/mkl', description: 'root of Intel-MKL installation (only for non-intel compilers)')
option('enable-openblas', type : 'boolean', value : false, description: 'enable BLAS and LAPACK support via OpenBLAS')
option('blas-name', type : 'string', value : 'openblas', description: 'name of the BLAS/LAPACK dependency')
option('enable-pastix', type : 'boolean', value : false, description: 'enable PaStiX support')
option('pastix_root', type : 'string', value : 'externals/pastix/', description: 'PaStiX base directory')
option('scotch_root', type : 'string', value : 'externals/scotch/', description: 'Scotch base directory')
