option('with-mpi',   type : 'feature', value : 'auto', description: 'enable MPI support')
option('with-omp',   type : 'boolean', value : false, description: 'enable OpenMP support')
option('enable-tecio', type : 'boolean', value : true, description: 'enable TECIO support')
option('enable-cgns',  type : 'boolean', value : true, description: 'enable CGNS support')
option('enable-autodiff',  type : 'boolean', value : false, description: 'enable AD (reverse) support')
option('enable-directdiff',  type : 'boolean', value : false, description: 'enable AD (forward) support')
option('enable-pywrapper',  type : 'boolean', value : false, description: 'enable Python wrapper support')
option('enable-normal',  type : 'boolean', value : true, description: 'enable normal build')
option('enable-mkl', type : 'boolean', value : false, description: 'enable Intel-MKL support')
option('mkl_root', type : 'string', value : '/opt/intel/mkl', description: 'root of Intel-MKL installation (only for non-intel compilers)')
option('enable-openblas', type : 'boolean', value : false, description: 'enable BLAS and LAPACK support via OpenBLAS')
option('blas-name', type : 'string', value : 'openblas', description: 'name of the BLAS/LAPACK dependency')
option('enable-pastix', type : 'boolean', value : false, description: 'enable PaStiX support')
option('pastix_root', type : 'string', value : 'externals/pastix/', description: 'PaStiX base directory')
option('scotch_root', type : 'string', value : 'externals/scotch/', description: 'Scotch base directory')
option('custom-mpi',  type : 'boolean', value : false, description: 'enable MPI assuming the compiler and/or env vars give the correct include dirs and linker args.')
option('enable-tests',  type : 'boolean', value : false, description: 'compile Unit Tests')
option('enable-mixedprec', type : 'boolean', value : false, description: 'use single precision floating point arithmetic for sparse algebra')
option('extra-deps', type : 'string', value : '', description: 'comma-separated list of extra (custom) dependencies to add for compilation')
option('enable-mpp',  type : 'boolean', value : false, description: 'enable Mutation++ support')
option('install-mpp', type : 'boolean', value : false, description: 'install Mutation++ in the directory defined with --prefix')
option('enable-coolprop',  type : 'boolean', value : false, description: 'enable CoolProp support')
option('enable-mlpcpp', type : 'boolean', value : false, description: 'enable MLPCpp support')
option('opdi-backend', type : 'combo', choices : ['auto', 'macro', 'ompt'], value : 'auto', description: 'OpDiLib backend choice')
option('codi-tape', type : 'combo', choices : ['JacobianLinear', 'JacobianReuse', 'JacobianMultiUse', 'PrimalLinear', 'PrimalReuse', 'PrimalMultiUse'], value : 'JacobianLinear', description: 'CoDiPack tape choice')
option('opdi-shared-read-opt', type : 'boolean', value : true, description : 'OpDiLib shared reading optimization')
option('librom_root', type : 'string', value : '', description: 'libROM base directory')
option('enable-librom', type : 'boolean', value : false, description: 'enable LLNL libROM support')
option('static-cgns-deps', type : 'boolean', value : false, description: 'prefer static or dynamic (default) libraries for CGNS dependencies')
