ADD_EXECUTABLE ( SU2_CFD
  src/definition_structure.cpp
  src/integration_structure.cpp
  src/integration_time.cpp
  src/iteration_structure.cpp
  src/numerics_adjoint_levelset.cpp
  src/numerics_adjoint_mean.cpp
  src/numerics_adjoint_tne2.cpp
  src/numerics_adjoint_turbulent.cpp
  src/numerics_direct_elasticity.cpp
  src/numerics_direct_heat.cpp
  src/numerics_direct_mean.cpp
  src/numerics_direct_poisson.cpp
  src/numerics_direct_tne2.cpp
  src/numerics_direct_transition.cpp
  src/numerics_direct_turbulent.cpp
  src/numerics_direct_wave.cpp
  src/numerics_linearized_mean.cpp
  src/numerics_linearized_turbulent.cpp
  src/numerics_machine_learning.cpp
  src/numerics_machine_learning_turbulent.cpp
  src/numerics_structure.cpp
  src/numerics_template.cpp
  src/output_cgns.cpp
  src/output_paraview.cpp
  src/output_structure.cpp
  src/output_tecplot.cpp
  src/solver_adjoint_levelset.cpp
  src/solver_adjoint_mean.cpp
  src/solver_adjoint_tne2.cpp
  src/solver_adjoint_turbulent.cpp
  src/solver_direct_elasticity.cpp
  src/solver_direct_heat.cpp
  src/solver_direct_mean.cpp
  src/solver_direct_poisson.cpp
  src/solver_direct_tne2.cpp
  src/solver_direct_transition.cpp
  src/solver_direct_turbulent.cpp
  src/solver_direct_wave.cpp
  src/solver_linearized_mean.cpp
  src/solver_linearized_turbulent.cpp
  src/solver_structure.cpp
  src/solver_template.cpp
  src/SU2_CFD.cpp
  src/variable_adjoint_levelset.cpp
  src/variable_adjoint_mean.cpp
  src/variable_adjoint_tne2.cpp
  src/variable_adjoint_turbulent.cpp
  src/variable_direct_elasticity.cpp
  src/variable_direct_heat.cpp
  src/variable_direct_mean.cpp
  src/variable_direct_poisson.cpp
  src/variable_direct_tne2.cpp
  src/variable_direct_transition.cpp
  src/variable_direct_turbulent.cpp
  src/variable_direct_wave.cpp
  src/variable_linearized_mean.cpp
  src/variable_linearized_turbulent.cpp
  src/variable_structure.cpp
  src/variable_template.cpp
  )
