install_data(['continuous_adjoint.py',
             'compute_uncertainty.py',
	     'finite_differences.py',
	     'mesh_deformation.py',
	     'parallel_computation.py',
	     'parallel_computation_fsi.py',
	     'package_tests.py',
	     'patient_designspace.py',
	     'shape_optimization.py',
	     'merge_solution.py',
	     'set_ffd_design_var.py',
	     'compute_polar.py',
	     'compute_multipoint.py',
	     'discrete_adjoint.py',
	     'direct_differentiation.py',
	     'fsi_computation.py',
	     'SU2_CFD.py'], 
	     install_dir: join_paths(get_option('bindir')))

